--- a/Web.API/appsettings.Development.json
+++ b/Web.API/appsettings.Development.json
@@ -1,6 +1,8 @@
+
+
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost;Database=easyposdb;User Id=sa;Password=Admin123$;Encrypt=false"
+    "SqlServer": "Server=localhost;Database=postgres;User id=postgres;Password=1999;Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
