--- a/Web.API/appsettings.Development.json
+++ b/Web.API/appsettings.Development.json
@@ -2,7 +2,7 @@
 
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost;Database=postgres;User id=postgres;Password=1999;Encrypt=false"
+    "SqlServer": "Server=ASUS-TUF-GAMING\\LOCALHOST;Database=postgres;User id=sa;Password=1999;Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
